--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,6 +1,8 @@
 name: documentation
 
-on: [push, pull_request, workflow_dispatch]
+on: 
+  schedule:
+    - cron: "30 0 * * *"
 
 permissions:
   contents: write
