--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ selenium = "^4.22.0"
 furo = "^2024.5.6"
 sphinx = "^7.3.7"
 argparse = "^1.4.0"
+sphinxcontrib-napoleon = "^0.7"
 
 
 [build-system]
