--- a/requirements.txt
+++ b/requirements.txt
@@ -257,6 +257,9 @@ outcome==1.3.0.post0 ; python_version >= "3.10" and python_version < "4.0" \
 packaging==24.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:026ed72c8ed3fcce5bf8950572258698927fd1dbda10a5e981cdf0ac37f4f002 \
     --hash=sha256:5b8f2217dbdbd2f7f384c41c628544e6d52f2d0f53c6d0c3ea61aa5d1d7ff124
+pockets==0.9.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:68597934193c08a08eb2bf6a1d85593f627c22f9b065cc727a4f03f669d96d86 \
+    --hash=sha256:9320f1a3c6f7a9133fe3b571f283bcf3353cd70249025ae8d618e40e9f7e92b3
 pycparser==2.22 ; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:491c8be9c040f5390f5bf44a5b07752bd07f56edf992381b05c701439eec10f6 \
     --hash=sha256:c3702b6d3dd8c7abc1afa565d7e63d53a1d0bd86cdc24edd75470f4de499cfcc
@@ -276,6 +279,9 @@ rich==13.7.1 ; python_version >= "3.10" and python_version < "4.0" \
 selenium==4.22.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:903c8c9d61b3eea6fcc9809dc7d9377e04e2ac87709876542cc8f863e482c4ce \
     --hash=sha256:e424991196e9857e19bf04fe5c1c0a4aac076794ff5e74615b1124e729d93104
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
+    --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2f6da418d1f1e0fddd844478f41680e794e6051915791a034ff65e5f100525a2 \
     --hash=sha256:f4324edc670a0f49750a81b895f35c3adb843cca46f0530f79fc1babb23789dc
@@ -306,6 +312,9 @@ sphinxcontrib-htmlhelp==2.0.5 ; python_version >= "3.10" and python_version < "4
 sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2ec2eaebfb78f3f2078e73666b1415417a116cc848b72e5172e596c871103178 \
     --hash=sha256:a9925e4a4587247ed2191a22df5f6970656cb8ca2bd6284309578f2153e0c4b8
+sphinxcontrib-napoleon==0.7 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:407382beed396e9f2d7f3043fad6afda95719204a1e1a231ac865f40abcbfcf8 \
+    --hash=sha256:711e41a3974bdf110a484aec4c1a556799eb0b3f3b897521a018ad7e2db13fef
 sphinxcontrib-qthelp==1.0.7 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:053dedc38823a80a7209a80860b16b722e9e0209e32fea98c90e4e6624588ed6 \
     --hash=sha256:e2ae3b5c492d58fcbd73281fbd27e34b8393ec34a073c792642cd8e529288182
