--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,29 @@
-[tool.poetry]
-name = "wordle bot"
-version = "1.0.0"
-description = "A bot which solves Wordle."
-authors = ["Jampamane <68441282+Jampamane@users.noreply.github.com>"]
+[project]
+name = "wordle-bot"
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "rich>=14.0.0",
+    "selenium>=4.31.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-rich = "^13.7.1"
-selenium = "^4.22.0"
-furo = "^2024.5.6"
-sphinx = "^7.3.7"
-argparse = "^1.4.0"
-sphinxcontrib-napoleon = "^0.7"
+[project.scripts]
+wordle-bot = "wordle_bot.main:main"
+wordle-bot-4 = "wordle_bot.wordle_multiprocess:process"
 
+[dependency-groups]
+dev = [
+    "mkdocs-material>=9.6.12",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build]
+include = [
+  "wordle_bot/five_letter_words.json"
+]
+
