--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "requests>=2.32.3",
     "rich>=14.0.0",
     "selenium>=4.31.0",
 ]
