--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ wordle-bot-multi = "wordle_bot.wordle_multiprocess:process"
 dev = [
     "mkdocs-material>=9.6.12",
 ]
+
+[tool.uv]
+package = true
