--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,18 +18,18 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install uv
+          uv sync
       - name: Play Wordle
         run: |
-          python $GITHUB_WORKSPACE/src/main.py --export
-      - name: Sphinx build
+          uv run python $GITHUB_WORKSPACE/output_file.py
+      - name: mkdocs build
         run: |
-          sphinx-apidoc -f -o docs/source $GITHUB_WORKSPACE/src
-          sphinx-build docs/source docs/build
+          mkdocs build --site-dir site
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build
+          publish_dir: site
           force_orphan: true
