fix: added some logic for the pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
 ]
 
 [project.scripts]
-wordle-bot = "wordle_bot.__main__:main"
+wordle-bot = "wordle_bot.__main__:solve"
 wordle-bot-multi = "wordle_bot.wordle_multiprocess:process"
 
 [dependency-groups]
