fix: file reference

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,7 +22,7 @@ jobs:
           uv sync
       - name: Play Wordle
         run: |
-          wordle-bot
+          python3 $GITHUB_WORKSPACE/wordle_bot/wordle_bot
       - name: mkdocs build
         run: |
           mkdocs build --site-dir site
