fix: file reference

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,10 +22,7 @@ jobs:
           uv sync
       - name: Play Wordle
         run: |
-          ls
-          ls -l
-          ls -a
-          python3 $GITHUB_WORKSPACE/
+          python3 $GITHUB_WORKSPACE/wordle_bot/
       - name: mkdocs build
         run: |
           mkdocs build --site-dir site
