--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,7 +25,7 @@ jobs:
           uv run wordle-bot
       - name: mkdocs build
         run: |
-          mkdocs build --site-dir site
+          uv run mkdocs build --site-dir site
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
